--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,4 @@
 {
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "printWidth": 80
+  "singleQuote": true,
+  "trailingComma": "all"
 }
