--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "module": "commonjs",
-    "lib": [
-      "es2015",
-      "dom"
-    ],
-    "allowJs": true,
-    "outDir": "dist",
-    "rootDir": ".",
+    "declaration": true,
     "removeComments": true,
-    /* Strict Typechecking Options */
-    "strict": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "paths": {
-      "@src/*": [
-        "src/*"
-      ],
-    },
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-  },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "coverage"
-  ],
-  "include": [
-    "src"
-  ]
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
+  }
 }
