Port update to connect with Heroku Check develop

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="mongodb+srv://furnito:furnito123@cluster0.pbn2qja.mongodb.net/User?retryWrites=true&w=majority"
 JWT_SECRET="furnito-secret"
+PORT=4000
