Added npm and node version for heroku

--- a/package.json
+++ b/package.json
@@ -80,5 +80,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines" : {
+    "npm" : "8.12.2",
+    "node" : "16.15.1"
   }
 }
