--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --watch --no-cache --config ./test/jest-e2e.json",
+    "prestart:prod": "npm run build",
     "postinstall": "npm run prestart:prod"
   },
   "dependencies": {
