--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "^4.2.0",
-    "argon2": "^0.28.7",
+    "@nestjs/swagger": "^6.0.5",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "mongoose": "^6.2.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "stripe": "^9.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -82,8 +86,8 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-  "engines" : {
-    "npm" : "8.12.2",
-    "node" : "16.15.1"
+  "engines": {
+    "npm": "8.12.2",
+    "node": "16.15.1"
   }
 }
