--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+#LOCAL_URL="mongodb://localhost:27017/furnito"
 DATABASE_URL="mongodb+srv://furnito:furnito123@cluster0.pbn2qja.mongodb.net/User?retryWrites=true&w=majority"
 JWT_SECRET="furnito-secret"
 PORT=4000
